--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?3f2d73bab0c18dc07ee3170f1f383470";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </head>
 
 <body>
@@ -37,9 +47,10 @@
 	</button>
 	<a href="#" class="tooltip-test" data-toggle="tooltip" title="因为根据抓包情况可以得知，在看视频和做题的过程中并没有上传数据，也就是官方不检测你是否看完或做题"><strong>🧐 为什么不需要播放完和做题？</strong></a>
 </div>
-  <div id="step" class="well" style="display:none">操作步骤：<br><br>1.<a href="/snap" target="_blank"><strong>点击此处</strong></a>进入“学习完成截图”生成页面，截完图后请返回到本页面进行下一步操作<br><br>2.<a href="http://zqw.lerwin.com/" target="_blank"><strong>点击此处</strong></a>进入团团官方学习页面，点击“开始学习”，待动画开始播放后即可退出<br><br>至此，轻轻松松，学习完成😊😊</div>
+  <div id="step" class="well" style="display:none">操作步骤：<br><br>1.<a href="http://zqw.lerwin.com/" target="_blank"><strong>点击此处</strong></a>进入团团官方学习页面，点击“开始学习”，待动画开始播放后即可退出<br><br>2.<a href="/snap" target="_blank"><strong>点击此处</strong></a>进入“学习完成截图”生成页面，截完图后请返回到本页面进行下一步操作<br><br>至此，轻轻松松，学习完成😊😊</div>
 
 </div>
+
 
 <script>
 	$(function () { $("[data-toggle='tooltip']").tooltip(); });
