--- a/snap/end.html
+++ b/snap/end.html
@@ -1,6 +1,16 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?3f2d73bab0c18dc07ee3170f1f383470";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </head>
 <body style="margin: 0px">
 <!--<img src="" id="main" width="100%" height="100%" style='position: absolute;left:0px;top:0px;z-index: -1'>-->
@@ -37,5 +47,15 @@
     // $("#main").attr("src", `http://h5.cyol.com/special/daxuexi/daxuexi${s}${realE(e)}${e}/images/end.jpg`)
 
 </script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?1f98767dc2ab27ead5d749d0d3781df5";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </body>
 </html>
